@@ -15,5 +15,25 @@
                 [ 46, 55 ], [ 46, 56 ], [ 46, 57 ]
             ]
         }
+    ],
+    "surfaces": [
+        {
+            "to_surface": "rct2.terrain_surface.sand",
+            "coordinates": [
+                [ 41, 47 ], [ 41, 48 ], [ 41, 49 ], [ 41, 50 ], [ 41, 51 ], [ 41, 52 ], [ 41, 53 ],
+                [ 41, 54 ], [ 41, 55 ], [ 41, 56 ], [ 41, 57 ], [ 41, 58 ], [ 41, 59 ], [ 41, 60 ],
+                [ 42, 48 ], [ 42, 49 ], [ 42, 50 ], [ 42, 51 ], [ 42, 52 ], [ 42, 53 ], [ 42, 54 ],
+                [ 42, 55 ], [ 42, 56 ], [ 42, 57 ], [ 42, 58 ], [ 42, 59 ],
+                [ 43, 48 ], [ 43, 49 ], [ 43, 50 ], [ 43, 51 ], [ 43, 52 ], [ 43, 53 ], [ 43, 54 ],
+                [ 43, 55 ], [ 43, 56 ], [ 43, 57 ], [ 43, 58 ],
+                [ 44, 49 ], [ 44, 50 ], [ 44, 51 ], [ 44, 52 ], [ 44, 53 ], [ 44, 54 ], [ 44, 55 ],
+                [ 44, 56 ], [ 44, 57 ], [ 44, 58 ],
+                [ 45, 49 ], [ 45, 50 ], [ 45, 51 ], [ 45, 52 ], [ 45, 53 ], [ 45, 54 ], [ 45, 55 ],
+                [ 45, 56 ], [ 45, 57 ], [ 45, 58 ],
+                [ 46, 51 ], [ 46, 52 ], [ 46, 53 ], [ 46, 54 ], [ 46, 55 ], [ 46, 56 ], [ 46, 57 ],
+                [ 46, 58 ],
+                [ 47, 54 ], [ 47, 55 ], [ 47, 56 ], [ 47, 57 ]
+            ]
+        }
     ]
 }
