@@ -6,6 +6,7 @@
 - Fix: [#21959] “Save this before...?” message does not appear when selecting “New Game”.
 - Fix: [#22231] Invalid object version can cause a crash.
 - Fix: [#22653] Add several .parkpatch files for missing water tiles in RCT1 and RCT2 scenarios.
+- Fix: [#22655] Fix surface style of Botany Breakers around missing water tiles.
 
 0.4.14 (2024-09-01)
 ------------------------------------------------------------------------
